# research

./: Cargo.toml
crates/git_ui/src/: onboarding.rs
crates/library_panel/: Cargo.toml
crates/library_panel/src/: library_panel.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: title_bar.rs
crates/welcome/src/: welcome.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
